# fastapi_app

./: Makefile  README.md  bd.sqlite3  main.py  pyproject.toml  test_crud.py
alembic/: env.py
alembic/versions/: 2025_04_03_1423-74f80e63ff5e_init_migration.py  2025_04_03_1445-d71aa011e588_create_user_table.py  2025_04_03_1500-f1c857eae74d_create_post_table.py  2025_04_03_1611-b18ea6d1d925_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: db_helper.py  mixins.py  post.py  profile.py  user.py
