[project]
name = "fastai-test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "fastapi[standart]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standart]>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.2",
]
